Add rename popup for extract to const CA